Explore PhageRBP distribution

--- a/notebooks/01_ingest_data.ipynb
+++ b/notebooks/01_ingest_data.ipynb
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "      <th>other</th>\n",
        "      <th>confidence</th>\n",
        "      <th>PhageRBPdetect_prediction</th>\n",
-       "      <th>PhageRBDdetect_score</th>\n",
+       "      <th>PhageRBPdetect_score</th>\n",
        "      <th>ESM_based_label</th>\n",
        "      <th>ESM_based_fiber_prediction</th>\n",
        "    </tr>\n",
@@ -974,7 +974,7 @@
        "35414    0.02  0.00   9.94        1.00                          0   \n",
        "35415    0.02  0.10   9.72        1.00                          0   \n",
        "\n",
-       "       PhageRBDdetect_score ESM_based_label  ESM_based_fiber_prediction  \n",
+       "       PhageRBPdetect_score ESM_based_label  ESM_based_fiber_prediction  \n",
        "0              2.403247e-05           other                           0  \n",
        "1              3.570606e-08           other                           0  \n",
        "2              1.817806e-06           other                           0  \n",
@@ -996,10 +996,27 @@
     {
      "data": {
       "text/plain": [
-       "(35416, 17)"
+       "seqID                         string[python]\n",
+       "major_capsid                         float64\n",
+       "minor_capsid                         float64\n",
+       "baseplate                            float64\n",
+       "major_tail                           float64\n",
+       "minor_tail                           float64\n",
+       "portal                               float64\n",
+       "tail_fiber                           float64\n",
+       "tail_shaft                           float64\n",
+       "collar                               float64\n",
+       "HTJ                                  float64\n",
+       "other                                float64\n",
+       "confidence                           float64\n",
+       "PhageRBPdetect_prediction              int64\n",
+       "PhageRBPdetect_score                 float64\n",
+       "ESM_based_label               string[python]\n",
+       "ESM_based_fiber_prediction             int64\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,18 +1029,20 @@
     "protein_NN.rename(columns=lambda x: x.lower() if protein_NN.columns.get_loc(x) < 10 else x, inplace=True)\n",
     "protein_NN.rename(columns=lambda x: x.lower() if protein_NN.columns.get_loc(x) in [11, 12] else x, inplace=True)\n",
     "protein_NN.rename(columns={'name': 'seqID'}, inplace=True)\n",
+    "protein_NN.rename(columns={'PhageRBDdetect_score': 'PhageRBPdetect_score'}, inplace=True)\n",
     "\n",
     "# Define schema\n",
     "protein_NN['seqID'] = protein_NN['seqID'].astype('string')\n",
     "protein_NN.iloc[:, 1:13] = protein_NN.iloc[:, 1:13].astype('float64')\n",
     "protein_NN['PhageRBPdetect_prediction'] = protein_NN['PhageRBPdetect_prediction'].astype('int64')\n",
-    "protein_NN['PhageRBDdetect_score'] = protein_NN['PhageRBDdetect_score'].astype('float64')\n",
+    "protein_NN['PhageRBPdetect_score'] = protein_NN['PhageRBPdetect_score'].astype('float64')\n",
     "protein_NN['ESM_based_label'] = protein_NN['ESM_based_label'].str.strip().astype('string')  # Remove leading and trailing whitespaces\n",
     "protein_NN['ESM_based_fiber_prediction'] = protein_NN['ESM_based_fiber_prediction'].astype('int64')\n",
     "\n",
     "# display proteins where PhageRBPdetect_prediction is 1\n",
     "display(protein_NN)\n",
-    "protein_NN.shape"
+    "protein_NN.shape\n",
+    "protein_NN.dtypes"
    ]
   },
   {
@@ -1369,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
