Explore ESM-based distribution

--- a/notebooks/02_transform_data.ipynb
+++ b/notebooks/02_transform_data.ipynb
@@ -1573,7 +1573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the most strict filter we still have 633 positive predictions. \\\n",
+    "With the most strict filter we still have 633 positive predictions - 1.79 % of total. \\\n",
     "Let's explore more in detail to see if we can reduce this number"
    ]
   },
@@ -1701,6 +1701,59 @@
     "With a stricter threshold we have a number of survivors closer to the PhaNNS'\n",
     "### confidence > 0.9999\n",
     "### survivors = 96"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Explore ESM-based distribution\n",
+    "ESM_based_fiber_prediction is a binary attribute which states if the ESM-based classifier labeled the protein as tail fiber. \\\n",
+    "We are not provided with any confidence score. Let's check anyway how many predictions we have. \\\n",
+    "We'll later interesect with the sets of the previous predictors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ESM_based_fiber_prediction\n",
+       "0    34622\n",
+       "1      794\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ESM_based_fiber_prediction\n",
+       "0    97.758075\n",
+       "1     2.241925\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Count 0, 1 and nan occurencies in ESM_based_fiber_prediction and show percentages \n",
+    "display(protein_NN['ESM_based_fiber_prediction'].value_counts(dropna=False))\n",
+    "display(protein_NN['ESM_based_fiber_prediction'].value_counts(normalize=True, dropna=False) * 100)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ESM-based predicts 794 proteins - 2.24 % of total - as tail fibers."
    ]
   }
  ],
