--- a/notebooks/02_transform_data.ipynb
+++ b/notebooks/02_transform_data.ipynb
@@ -2495,7 +2495,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Obtain model initial dataset"
+    "## 3. Obtain model initial positive dataset\n",
+    "Let's now obtain a the set of interacting protein pairs. \\\n",
+    "We will then need to obtain a set of negative samples. \\\n",
+    "The model input set will consist of this two sets together."
    ]
   },
   {
@@ -3455,7 +3458,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Save model initial dataset"
+    "## 4. Negative samples\n",
+    "We need to define a set of negative samples to train the model. \\\n",
+    "They will consist of random pairs of phage and host proteins, produced outside of the set of interacting protein pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Save model initial dataset"
    ]
   }
  ],
