Check RBPs per bas

--- a/notebooks/02_transform_data.ipynb
+++ b/notebooks/02_transform_data.ipynb
@@ -3814,6 +3814,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of bas with a count of 1: 23\n",
+      "Number of bas with a count different than 1: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of different seqID_phage in protein_pairs grouped by bas\n",
+    "bas_count = protein_pairs.groupby('bas')['seqID_phage'].nunique().to_frame()\n",
+    "\n",
+    "# Print the number of bas with a count of 1 and different than 1\n",
+    "print(f'Number of bas with a count of 1: {len(bas_count.loc[bas_count[\"seqID_phage\"] == 1])}')\n",
+    "print(f'Number of bas with a count different than 1: {len(bas_count.loc[bas_count[\"seqID_phage\"] != 1])}')\n",
+    "\n",
+    "# If any bas has a count different than 1 say it and display bas_count with a count different than 1\n",
+    "if len(bas_count.loc[bas_count[\"seqID_phage\"] != 1]) > 0:\n",
+    "    print('The following bas have a count different than 1:')\n",
+    "    display(bas_count.loc[bas_count[\"seqID_phage\"] != 1])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3835,7 +3863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3881,7 +3909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3895,7 +3923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3930,20 +3958,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Sf23</td>\n",
-       "      <td>lcl|MF158046.1_prot_ATE86513.1_103</td>\n",
-       "      <td>MNIKKFQIDGIMNQIQALEYANKMMSTNWGIYANEPAFKFCDMEFT...</td>\n",
-       "      <td>sp|P0A972|CSPE_ECOLI</td>\n",
-       "      <td>MSKIKGNVKWFNESKGFGFITPEDGSKDVFVHFSAIQTNGFKTLAE...</td>\n",
+       "      <td>Bas05</td>\n",
+       "      <td>lcl|MZ501101.1_prot_QXV84076.1_77</td>\n",
+       "      <td>MFGMNEAQFNAAKRQAKKCGEAMKADVEKRGKYVDEVMKGIIAEHY...</td>\n",
+       "      <td>sp|P30870|GLNE_ECOLI</td>\n",
+       "      <td>MKPLSSPLQQYWQTVVERLPEPLAEESLSAQAKSVLTFSDFVQDSV...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>E112</td>\n",
-       "      <td>lcl|NC_024125.2_prot_YP_009030883.1_278</td>\n",
-       "      <td>MLGYQARVKEEYDQLMLKINALSKFLESAKFLTVSAVEQELLLSQF...</td>\n",
-       "      <td>sp|P32140|SQUS_ECOLI</td>\n",
-       "      <td>MKWFNTLSHNRWLEQETDRIFDFGKNSVVPTGFGWLGNKGQIKEEM...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>lcl|MH358458.1_prot_AWY03443.1_77</td>\n",
+       "      <td>MQKLSEVYRGLALSTLKGTGSVTDDRLGIEPDSKPEILAAINEGLV...</td>\n",
+       "      <td>sp|P37177|PT1P_ECOLI</td>\n",
+       "      <td>MLTRLREIVEKVASAPRLNEALNILVTDICLAMDTEVCSVYLADHD...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3951,17 +3979,17 @@
        "</div>"
       ],
       "text/plain": [
-       "    bas                              seqID_phage  \\\n",
-       "0  Sf23       lcl|MF158046.1_prot_ATE86513.1_103   \n",
-       "1  E112  lcl|NC_024125.2_prot_YP_009030883.1_278   \n",
+       "     bas                        seqID_phage  \\\n",
+       "0  Bas05  lcl|MZ501101.1_prot_QXV84076.1_77   \n",
+       "1    NaN  lcl|MH358458.1_prot_AWY03443.1_77   \n",
        "\n",
        "                                      sequence_phage             seqID_k12  \\\n",
-       "0  MNIKKFQIDGIMNQIQALEYANKMMSTNWGIYANEPAFKFCDMEFT...  sp|P0A972|CSPE_ECOLI   \n",
-       "1  MLGYQARVKEEYDQLMLKINALSKFLESAKFLTVSAVEQELLLSQF...  sp|P32140|SQUS_ECOLI   \n",
+       "0  MFGMNEAQFNAAKRQAKKCGEAMKADVEKRGKYVDEVMKGIIAEHY...  sp|P30870|GLNE_ECOLI   \n",
+       "1  MQKLSEVYRGLALSTLKGTGSVTDDRLGIEPDSKPEILAAINEGLV...  sp|P37177|PT1P_ECOLI   \n",
        "\n",
        "                                        sequence_k12  pair  \n",
-       "0  MSKIKGNVKWFNESKGFGFITPEDGSKDVFVHFSAIQTNGFKTLAE...     0  \n",
-       "1  MKWFNTLSHNRWLEQETDRIFDFGKNSVVPTGFGWLGNKGQIKEEM...     0  "
+       "0  MKPLSSPLQQYWQTVVERLPEPLAEESLSAQAKSVLTFSDFVQDSV...     0  \n",
+       "1  MLTRLREIVEKVASAPRLNEALNILVTDICLAMDTEVCSVYLADHD...     0  "
       ]
      },
      "metadata": {},
@@ -3983,7 +4011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4001,7 +4029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4039,44 +4067,44 @@
        "      <td>Js09</td>\n",
        "      <td>lcl|NC_024124.2_prot_YP_009037527.1_26</td>\n",
        "      <td>MADIKRKFRAEDGLDAGGDKIVNVALADRTVGTDGVNVDFLVQENT...</td>\n",
-       "      <td>sp|P33919|RADD_ECOLI</td>\n",
-       "      <td>MIFTLRPYQQEAVDATLNHFRRHKTPAVIVLPTGAGKSLVIAELAR...</td>\n",
+       "      <td>sp|P0CK95|ACFD_ECOLI</td>\n",
+       "      <td>MNKKFKYKKSLLAAILSATLLAGCDGGGSGSSSDTPPVDSGTGSLP...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Pyps2t</td>\n",
-       "      <td>lcl|MH809535.1_prot_AYJ74491.1_85</td>\n",
-       "      <td>MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...</td>\n",
-       "      <td>sp|P06992|RSMA_ECOLI</td>\n",
-       "      <td>MNNRVHQGHLARKRFGQNFLNDQFVIDSIVSAINPQKGQAMVEIGP...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>lcl|MG050172.1_prot_ATW61821.1_44</td>\n",
+       "      <td>MAQMIKTNTRLCDMSEDIKIYGAKGGSQKQHQPVEQEDNLISLNKV...</td>\n",
+       "      <td>sp|Q47152|RAYT_ECOLI</td>\n",
+       "      <td>MSEYRRYYIKGGTWFFTVNLRNRRSQLLTTQYQMLRHAIIKVKRDR...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Bas01</td>\n",
-       "      <td>lcl|MZ501051.1_prot_QXV76158.1_27</td>\n",
-       "      <td>MAQMIKTNMRLCDMAEEIKIYGAKGGSQKQHQPVEQEDNLISLNKV...</td>\n",
-       "      <td>sp|P16525|TUS_ECOLI</td>\n",
-       "      <td>MARYDLVDRLNTTFRQMEQELAIFAAHLEQHKLLVARVFSLPEVKK...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>lcl|KF208315.1_prot_AGR46195.1_244</td>\n",
+       "      <td>MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...</td>\n",
+       "      <td>sp|P39221|YABQ_ECOLI</td>\n",
+       "      <td>MNGATSLYDEVIIINKIPPKKIDTKGVATEEVATKKVLLNKLLTTQ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>lcl|AM156909.1_prot_CAJ42247.1_43</td>\n",
-       "      <td>MAQMIKTNMRLCDMAEEIKIYGAKGGSQKQHQPVEQEDNLISLNKV...</td>\n",
-       "      <td>sp|P52067|FSR_ECOLI</td>\n",
-       "      <td>MAMSEQPQPVAGAAASTTKARTSFGILGAISLSHLLNDMIQSLILA...</td>\n",
+       "      <td>H1n87</td>\n",
+       "      <td>lcl|NC_049823.1_prot_YP_009901705.1_74</td>\n",
+       "      <td>MAENMITGSKGGSSKPYVPKEMEDNLISINKIKILLAVSDGECDPS...</td>\n",
+       "      <td>sp|P39295|YJFM_ECOLI</td>\n",
+       "      <td>MARKRKSRNNSKIGHGAISRIGRPNNPFEPCRNRYAQKYLTLALMG...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Ecml134</td>\n",
-       "      <td>lcl|JX128259.1_prot_AFO10769.1_242</td>\n",
-       "      <td>MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...</td>\n",
-       "      <td>sp|P64467|CNU_ECOLI</td>\n",
-       "      <td>MTVQDYLLKFRKISSLESLEKLYDHLNYTLTDDQELINMYRAADHR...</td>\n",
+       "      <td>T4p249</td>\n",
+       "      <td>lcl|NC_000866.4_prot_NP_049860.1_249</td>\n",
+       "      <td>MAEIKREFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...</td>\n",
+       "      <td>sp|P00804|LSPA_ECOLI</td>\n",
+       "      <td>MSQSICSTGLRWLWLVVVVLIIDLGSKYLILQNFALGDTVPLFPSL...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4090,47 +4118,47 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2995</th>\n",
-       "      <td>G028</td>\n",
-       "      <td>lcl|NC_019781.1_prot_YP_007173568.1_50</td>\n",
-       "      <td>MTNIKARKGGSSSPRTPVEMPDNLISKDKVKLLLAVSDGEVVNDFS...</td>\n",
-       "      <td>sp|P66899|DPAL_ECOLI</td>\n",
-       "      <td>MSVFSLKIDIADNKFFNGETSPLFSQSQAKLARQFHQKIAGYRPTP...</td>\n",
+       "      <td>Bas35</td>\n",
+       "      <td>lcl|MZ501113.1_prot_QXV85917.1_80</td>\n",
+       "      <td>MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...</td>\n",
+       "      <td>sp|P0A7X3|RS9_ECOLI</td>\n",
+       "      <td>MAENQYYGTGRRKSSAARVFIKPGNGKIVINQRSLEQYFGRETARM...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2996</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>lcl|AM156909.1_prot_CAJ42247.1_43</td>\n",
-       "      <td>MAQMIKTNMRLCDMAEEIKIYGAKGGSQKQHQPVEQEDNLISLNKV...</td>\n",
-       "      <td>sp|P0ACS5|ZNTR_ECOLI</td>\n",
-       "      <td>MYRIGELAKMAEVTPDTIRYYEKQQMMEHEVRTEGGFRLYTESDLQ...</td>\n",
+       "      <td>lcl|MH550421.1_prot_AXN58281.1_240</td>\n",
+       "      <td>MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...</td>\n",
+       "      <td>sp|P75680|INSO1_ECOLI</td>\n",
+       "      <td>MATLCHVFGVHRSSYKYWKNRPEKPDGRRAVLRSQVLELHGISHGS...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2997</th>\n",
-       "      <td>Bi040</td>\n",
-       "      <td>lcl|NC_031050.1_prot_YP_009284681.1_57</td>\n",
-       "      <td>MAIYRTGTASLNAQGVIVGVGTNWQDKLSLVRVGATMIFQTAPLTI...</td>\n",
-       "      <td>sp|P10905|UGPA_ECOLI</td>\n",
-       "      <td>MSSSRPVFRSRWLPYLLVAPQLIITVIFFIWPAGEALWYSLQSVDP...</td>\n",
+       "      <td>Rb6</td>\n",
+       "      <td>lcl|KM606996.1_prot_AIT73522.1_242</td>\n",
+       "      <td>MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...</td>\n",
+       "      <td>sp|P0AG14|SOHB_ECOLI</td>\n",
+       "      <td>MELLSEYGLFLAKIVTVVLAIAAIAAIIVNVAQRNKRQRGELRVNN...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2998</th>\n",
-       "      <td>Bas37</td>\n",
-       "      <td>lcl|MZ501089.1_prot_QXV82063.1_82</td>\n",
-       "      <td>MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...</td>\n",
-       "      <td>sp|P45463|TTDR_ECOLI</td>\n",
-       "      <td>MLNSWPLAKDLQVLVEIVHSGSFSAAAATLGQTPAFVTKRIQILEN...</td>\n",
+       "      <td>T7p52</td>\n",
+       "      <td>lcl|NC_001604.1_prot_NP_042005.1_52</td>\n",
+       "      <td>MANVIKTVLTYQLDGSNRDFNIPFEYLARKFVVVTLIGVDRKVLTI...</td>\n",
+       "      <td>sp|P63340|YQEG_ECOLI</td>\n",
+       "      <td>MSNIWSKEETLWSFALYGTAVGAGTLFLPIQLGSAGAVVLFITALV...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2999</th>\n",
-       "      <td>Bas13</td>\n",
-       "      <td>lcl|MZ501092.1_prot_QXV82459.1_22</td>\n",
-       "      <td>MIQKVISGSKGGSQKPHNPVEMEDNLISINKIKILLAVSDGEIDET...</td>\n",
-       "      <td>sp|P62672|APAG_ECOLI</td>\n",
-       "      <td>MINSPRVCIQVQSVYIEAQSSPDNERYVFAYTVTIRNLGRAPVQLL...</td>\n",
+       "      <td>Hor71</td>\n",
+       "      <td>lcl|NC_047820.1_prot_YP_009789953.1_43</td>\n",
+       "      <td>MIKNSVVTGRKGGSSKPHTPQEMEDNLISINKIKVLLAVSDGEVDA...</td>\n",
+       "      <td>sp|P39834|YGIL_ECOLI</td>\n",
+       "      <td>MSAFKKSLLVAGVAMILSNNVFADEGHGIVKFKGEVISAPCSIKPG...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -4139,44 +4167,57 @@
        "</div>"
       ],
       "text/plain": [
-       "          bas                             seqID_phage  \\\n",
-       "0        Js09  lcl|NC_024124.2_prot_YP_009037527.1_26   \n",
-       "1      Pyps2t       lcl|MH809535.1_prot_AYJ74491.1_85   \n",
-       "2       Bas01       lcl|MZ501051.1_prot_QXV76158.1_27   \n",
-       "3         NaN       lcl|AM156909.1_prot_CAJ42247.1_43   \n",
-       "4     Ecml134      lcl|JX128259.1_prot_AFO10769.1_242   \n",
-       "...       ...                                     ...   \n",
-       "2995     G028  lcl|NC_019781.1_prot_YP_007173568.1_50   \n",
-       "2996      NaN       lcl|AM156909.1_prot_CAJ42247.1_43   \n",
-       "2997    Bi040  lcl|NC_031050.1_prot_YP_009284681.1_57   \n",
-       "2998    Bas37       lcl|MZ501089.1_prot_QXV82063.1_82   \n",
-       "2999    Bas13       lcl|MZ501092.1_prot_QXV82459.1_22   \n",
+       "         bas                             seqID_phage  \\\n",
+       "0       Js09  lcl|NC_024124.2_prot_YP_009037527.1_26   \n",
+       "1        NaN       lcl|MG050172.1_prot_ATW61821.1_44   \n",
+       "2        NaN      lcl|KF208315.1_prot_AGR46195.1_244   \n",
+       "3      H1n87  lcl|NC_049823.1_prot_YP_009901705.1_74   \n",
+       "4     T4p249    lcl|NC_000866.4_prot_NP_049860.1_249   \n",
+       "...      ...                                     ...   \n",
+       "2995   Bas35       lcl|MZ501113.1_prot_QXV85917.1_80   \n",
+       "2996     NaN      lcl|MH550421.1_prot_AXN58281.1_240   \n",
+       "2997     Rb6      lcl|KM606996.1_prot_AIT73522.1_242   \n",
+       "2998   T7p52     lcl|NC_001604.1_prot_NP_042005.1_52   \n",
+       "2999   Hor71  lcl|NC_047820.1_prot_YP_009789953.1_43   \n",
        "\n",
-       "                                         sequence_phage             seqID_k12  \\\n",
-       "0     MADIKRKFRAEDGLDAGGDKIVNVALADRTVGTDGVNVDFLVQENT...  sp|P33919|RADD_ECOLI   \n",
-       "1     MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...  sp|P06992|RSMA_ECOLI   \n",
-       "2     MAQMIKTNMRLCDMAEEIKIYGAKGGSQKQHQPVEQEDNLISLNKV...   sp|P16525|TUS_ECOLI   \n",
-       "3     MAQMIKTNMRLCDMAEEIKIYGAKGGSQKQHQPVEQEDNLISLNKV...   sp|P52067|FSR_ECOLI   \n",
-       "4     MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...   sp|P64467|CNU_ECOLI   \n",
-       "...                                                 ...                   ...   \n",
-       "2995  MTNIKARKGGSSSPRTPVEMPDNLISKDKVKLLLAVSDGEVVNDFS...  sp|P66899|DPAL_ECOLI   \n",
-       "2996  MAQMIKTNMRLCDMAEEIKIYGAKGGSQKQHQPVEQEDNLISLNKV...  sp|P0ACS5|ZNTR_ECOLI   \n",
-       "2997  MAIYRTGTASLNAQGVIVGVGTNWQDKLSLVRVGATMIFQTAPLTI...  sp|P10905|UGPA_ECOLI   \n",
-       "2998  MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...  sp|P45463|TTDR_ECOLI   \n",
-       "2999  MIQKVISGSKGGSQKPHNPVEMEDNLISINKIKILLAVSDGEIDET...  sp|P62672|APAG_ECOLI   \n",
+       "                                         sequence_phage  \\\n",
+       "0     MADIKRKFRAEDGLDAGGDKIVNVALADRTVGTDGVNVDFLVQENT...   \n",
+       "1     MAQMIKTNTRLCDMSEDIKIYGAKGGSQKQHQPVEQEDNLISLNKV...   \n",
+       "2     MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...   \n",
+       "3     MAENMITGSKGGSSKPYVPKEMEDNLISINKIKILLAVSDGECDPS...   \n",
+       "4     MAEIKREFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...   \n",
+       "...                                                 ...   \n",
+       "2995  MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...   \n",
+       "2996  MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...   \n",
+       "2997  MAEIKRKFRAEDGLDAGGDKIINVALADRTVGTDGVNVDYLIQENT...   \n",
+       "2998  MANVIKTVLTYQLDGSNRDFNIPFEYLARKFVVVTLIGVDRKVLTI...   \n",
+       "2999  MIKNSVVTGRKGGSSKPHTPQEMEDNLISINKIKVLLAVSDGEVDA...   \n",
+       "\n",
+       "                  seqID_k12  \\\n",
+       "0      sp|P0CK95|ACFD_ECOLI   \n",
+       "1      sp|Q47152|RAYT_ECOLI   \n",
+       "2      sp|P39221|YABQ_ECOLI   \n",
+       "3      sp|P39295|YJFM_ECOLI   \n",
+       "4      sp|P00804|LSPA_ECOLI   \n",
+       "...                     ...   \n",
+       "2995    sp|P0A7X3|RS9_ECOLI   \n",
+       "2996  sp|P75680|INSO1_ECOLI   \n",
+       "2997   sp|P0AG14|SOHB_ECOLI   \n",
+       "2998   sp|P63340|YQEG_ECOLI   \n",
+       "2999   sp|P39834|YGIL_ECOLI   \n",
        "\n",
        "                                           sequence_k12  pair  \n",
-       "0     MIFTLRPYQQEAVDATLNHFRRHKTPAVIVLPTGAGKSLVIAELAR...     0  \n",
-       "1     MNNRVHQGHLARKRFGQNFLNDQFVIDSIVSAINPQKGQAMVEIGP...     0  \n",
-       "2     MARYDLVDRLNTTFRQMEQELAIFAAHLEQHKLLVARVFSLPEVKK...     0  \n",
-       "3     MAMSEQPQPVAGAAASTTKARTSFGILGAISLSHLLNDMIQSLILA...     0  \n",
-       "4     MTVQDYLLKFRKISSLESLEKLYDHLNYTLTDDQELINMYRAADHR...     0  \n",
+       "0     MNKKFKYKKSLLAAILSATLLAGCDGGGSGSSSDTPPVDSGTGSLP...     0  \n",
+       "1     MSEYRRYYIKGGTWFFTVNLRNRRSQLLTTQYQMLRHAIIKVKRDR...     0  \n",
+       "2     MNGATSLYDEVIIINKIPPKKIDTKGVATEEVATKKVLLNKLLTTQ...     0  \n",
+       "3     MARKRKSRNNSKIGHGAISRIGRPNNPFEPCRNRYAQKYLTLALMG...     0  \n",
+       "4     MSQSICSTGLRWLWLVVVVLIIDLGSKYLILQNFALGDTVPLFPSL...     0  \n",
        "...                                                 ...   ...  \n",
-       "2995  MSVFSLKIDIADNKFFNGETSPLFSQSQAKLARQFHQKIAGYRPTP...     0  \n",
-       "2996  MYRIGELAKMAEVTPDTIRYYEKQQMMEHEVRTEGGFRLYTESDLQ...     0  \n",
-       "2997  MSSSRPVFRSRWLPYLLVAPQLIITVIFFIWPAGEALWYSLQSVDP...     0  \n",
-       "2998  MLNSWPLAKDLQVLVEIVHSGSFSAAAATLGQTPAFVTKRIQILEN...     0  \n",
-       "2999  MINSPRVCIQVQSVYIEAQSSPDNERYVFAYTVTIRNLGRAPVQLL...     0  \n",
+       "2995  MAENQYYGTGRRKSSAARVFIKPGNGKIVINQRSLEQYFGRETARM...     0  \n",
+       "2996  MATLCHVFGVHRSSYKYWKNRPEKPDGRRAVLRSQVLELHGISHGS...     0  \n",
+       "2997  MELLSEYGLFLAKIVTVVLAIAAIAAIIVNVAQRNKRQRGELRVNN...     0  \n",
+       "2998  MSNIWSKEETLWSFALYGTAVGAGTLFLPIQLGSAGAVVLFITALV...     0  \n",
+       "2999  MSAFKKSLLVAGVAMILSNNVFADEGHGIVKFKGEVISAPCSIKPG...     0  \n",
        "\n",
        "[3000 rows x 6 columns]"
       ]
@@ -4198,7 +4239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4208,7 +4249,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\pf259\\Projects\\Thesis\\notebooks\\02_transform_data.ipynb Cell 78\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pf259/Projects/Thesis/notebooks/02_transform_data.ipynb#Y116sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# How many rbp_phage == 1 per bas\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/pf259/Projects/Thesis/notebooks/02_transform_data.ipynb#Y116sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rbp_count \u001b[39m=\u001b[39m pos_samples\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mbas\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m'\u001b[39m\u001b[39mrbp_phage\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39msum()\u001b[39m.\u001b[39mto_frame()\n",
+      "\u001b[1;32mc:\\Users\\pf259\\Projects\\Thesis\\notebooks\\02_transform_data.ipynb Cell 79\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pf259/Projects/Thesis/notebooks/02_transform_data.ipynb#Y116sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# How many rbp_phage == 1 per bas\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/pf259/Projects/Thesis/notebooks/02_transform_data.ipynb#Y116sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rbp_count \u001b[39m=\u001b[39m pos_samples\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mbas\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m'\u001b[39m\u001b[39mrbp_phage\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39msum()\u001b[39m.\u001b[39mto_frame()\n",
       "\u001b[1;31mNameError\u001b[0m: name 'pos_samples' is not defined"
      ]
     }
