Moved functions to functions.py

--- a/notebooks/02_transform_data.ipynb
+++ b/notebooks/02_transform_data.ipynb
@@ -23,7 +23,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "# Import user defined libraries\n",
+    "import sys\n",
+    "sys.path.append(\"../src\")\n",
+    "from functions import PhaNNS_thresholds, phageRBP_thresholds, NN_thresholds, random_concatenation"
    ]
   },
   {
@@ -1436,50 +1441,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define a function for the previous code\n",
-    "def PhaNNS_thresholds(conf_thresholds: np.arange, tail_fiber_thresholds: np.arange, percentage=False):\n",
-    "    # Create a table to store the results\n",
-    "    df = pd.DataFrame(index=conf_thresholds, columns=tail_fiber_thresholds)\n",
-    "\n",
-    "    # Compute the number or percentage of survivors for each combination of thresholds\n",
-    "    for conf in conf_thresholds:\n",
-    "        for tf in tail_fiber_thresholds:\n",
-    "            survivors = protein_NN[(protein_NN['confidence'] > conf) & (protein_NN['tail_fiber'] > tf)]\n",
-    "            if percentage:\n",
-    "                df.loc[conf, tf] = len(survivors) / len(protein_NN) * 100\n",
-    "            else:\n",
-    "                df.loc[conf, tf] = len(survivors)\n",
-    "\n",
-    "    # Convert the data type of the DataFrame to float\n",
-    "    df = df.apply(pd.to_numeric)\n",
-    "\n",
-    "    # Plot the results as a heatmap for percentage\n",
-    "    fig, ax = plt.subplots(figsize=(10, 5))\n",
-    "    im = ax.imshow(df, cmap='YlGnBu')\n",
-    "\n",
-    "    # Add labels and ticks\n",
-    "    ax.set_xticks(np.arange(len(tail_fiber_thresholds)))\n",
-    "    ax.set_yticks(np.arange(len(conf_thresholds)))\n",
-    "    ax.set_xticklabels(tail_fiber_thresholds)\n",
-    "    ax.set_yticklabels(conf_thresholds)\n",
-    "    ax.set_xlabel('Tail Fiber Threshold')\n",
-    "    ax.set_ylabel('Confidence Threshold')\n",
-    "    if percentage:\n",
-    "        ax.set_title('Percentage of Survivors')\n",
-    "    else:\n",
-    "        ax.set_title('Number of Survivors')\n",
-    "    plt.colorbar(im)\n",
-    "    plt.show()\n",
-    "\n",
-    "    display(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -2233,28 +2194,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def phageRBP_thresholds(thresholds: np.arange):\n",
-    "    # Create a table to store the results\n",
-    "    df = pd.DataFrame(index=thresholds, columns=['survivors', 'percentage'])\n",
-    "\n",
-    "    # Compute the number and percentage of survivors for each threshold which have a prediction of 1\n",
-    "    for threshold in thresholds:\n",
-    "        survivors = protein_NN.loc[(protein_NN['PhageRBPdetect_score'] > threshold) & (protein_NN['PhageRBPdetect_prediction'] == 1)]\n",
-    "        df.loc[threshold, 'survivors'] = len(survivors)\n",
-    "        df.loc[threshold, 'percentage'] = len(survivors) / len(protein_NN) * 100\n",
-    "\n",
-    "    # Convert the data type of the DataFrame to float\n",
-    "    df = df.apply(pd.to_numeric)\n",
-    "\n",
-    "    display(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -2535,42 +2474,6 @@
     "### 4.4 Intersect survivors\n",
     "Let's procede now to apply all the thresholds at the same time. We will hopefully have a number of RBPs close to the number of viruses in the library. \\\n",
     "Later on we will check the number of proteins for each virus. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def NN_thresholds(thresholds: dict):\n",
-    "    # Docstring\n",
-    "    \"\"\"\n",
-    "    This function takes a dictionary of thresholds and returns a subset of protein_NN with the survivors.\n",
-    "    The dictionary must contain the following keys:\n",
-    "    - phanns_tf\n",
-    "    - phanns_conf\n",
-    "    - phagerbp\n",
-    "\n",
-    "    The dictionary must contain the following values:\n",
-    "    - float\n",
-    "    - float\n",
-    "    - float\n",
-    "\n",
-    "    The function returns a subset of protein_NN.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Subset protein_NN to relevant columns\n",
-    "    df = protein_NN[['seqID_phage', 'tail_fiber', 'confidence', 'PhageRBPdetect_prediction', 'PhageRBPdetect_score', 'ESM_based_fiber_prediction']]\n",
-    "\n",
-    "    # Subset to the thresholds\n",
-    "    df = df.loc[(df['tail_fiber'] > thresholds['phanns_tf']) &\n",
-    "                (df['confidence'] > thresholds['phanns_conf']) & \n",
-    "                (df['PhageRBPdetect_score'] > thresholds['phagerbp']) &\n",
-    "                (df['ESM_based_fiber_prediction'] == 1)]\n",
-    "    \n",
-    "    # Return the subset\n",
-    "    return df"
    ]
   },
   {
@@ -3859,52 +3762,6 @@
    "metadata": {},
    "source": [
     "### 6.1 Non-tail fiber with any other protein"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def random_concatenation(df_left, df_right, n_entries=3000, exclude_df=None):\n",
-    "    \"\"\"\n",
-    "    This function takes two dataframes and returns a dataframe with n random pairings of the two dataframes without duplicates.\n",
-    "    The function takes the following arguments:\n",
-    "    - df_left: dataframe\n",
-    "    - df_right: dataframe\n",
-    "    - n_entries: int\n",
-    "    \"\"\"\n",
-    "    # Select n random entries from each dataframe with replacement\n",
-    "    df_left_sample = df_left.sample(n_entries, replace=True)\n",
-    "    df_right_sample = df_right.sample(n_entries, replace=True)\n",
-    "    \n",
-    "    # Concatenate the selected entries into a new dataframe\n",
-    "    pairings = pd.concat([df_left_sample.reset_index(drop=True), df_right_sample.reset_index(drop=True)], axis=1)\n",
-    "\n",
-    "    # Add the exclude_df to the pairings\n",
-    "    if exclude_df is not None:\n",
-    "        n_rows_exclude = len(exclude_df)\n",
-    "        pairings = pd.concat([exclude_df, pairings], axis=0)\n",
-    "\n",
-    "    # Drop duplicates\n",
-    "    while len(pairings) != len(pairings.drop_duplicates()):\n",
-    "        new_samples = len(pairings) - len(pairings.drop_duplicates())\n",
-    "        pairings.drop_duplicates(inplace=True)\n",
-    "        df_left_sample = df_left.sample(new_samples, replace=True)\n",
-    "        df_right_sample = df_right.sample(new_samples, replace=True)\n",
-    "        new_pairings = pd.concat([df_left_sample.reset_index(drop=True), df_right_sample.reset_index(drop=True)], axis=1)\n",
-    "        pairings = pd.concat([pairings, new_pairings], axis=0)\n",
-    "\n",
-    "    # Remove the exclude_df from the pairings\n",
-    "    if exclude_df is not None:\n",
-    "        pairings = pairings.iloc[n_rows_exclude:, :]\n",
-    "\n",
-    "    # Reset index\n",
-    "    pairings.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "    # Return the resulting dataframe\n",
-    "    return pairings"
    ]
   },
   {
