--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -17,6 +17,15 @@
    "source": [
     "embedder = prottrans_t5_embedder.ProtTransT5XLU50Embedder()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Bravo re, ce l'hai fatta!\")"
+   ]
   }
  ],
  "metadata": {
