--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -24,7 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Bravo re, ce l'hai fatta!\")"
+    "# create a txt test file \n",
+    "with open(\"test.txt\", \"w\") as f:\n",
+    "    f.write(\"Bravo re, ce l'hai fatta!\")"
    ]
   }
  ],
