Moved 2_model_df.pkl to interim. Embedded proteins

--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import pandas  as pd\n",
     "from bio_embeddings.embed import prottrans_t5_embedder"
    ]
   },
@@ -16,6 +18,70 @@
    "outputs": [],
    "source": [
     "embedder = prottrans_t5_embedder.ProtTransT5XLU50Embedder()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load 2_model_df.pkl\n",
+    "INPUT_PATH = os.path.join(\"data\", \"interim\")\n",
+    "protein_pairs = pd.read_pickle(os.path.join(INPUT_PATH, \"2_model_df.pkl\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Embed protein sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def embed_protein(sequence):\n",
+    "    return embedder.reduce_per_protein(embedder.embed(sequence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add embeddings to protein_pairs\n",
+    "protein_pairs['seqID_phage_embed'] = protein_pairs['seqID_phage'].apply(embed_protein)\n",
+    "protein_pairs['seqID_bacteria_embed'] = protein_pairs['seqID_bacteria'].apply(embed_protein)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save 3_model_df.pkl\n",
+    "OUT_PATH = os.path.join(\"data\", \"interim\")\n",
+    "protein_pairs.to_pickle(os.path.join(OUT_PATH, \"3_model_df.pkl\"))"
    ]
   },
   {
