--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -91,8 +91,8 @@
    "outputs": [],
    "source": [
     "# create a txt test file \n",
-    "with open(\"test.txt\", \"w\") as f:\n",
-    "    f.write(\"Bravo re, ce l'hai fatta!\")"
+    "with open(\"3_test.txt\", \"w\") as f:\n",
+    "    f.write(\"03_embed finished successfully!\")"
    ]
   }
  ],
