--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -34,8 +34,8 @@
    "outputs": [],
    "source": [
     "# Load 2_model_df.pkl\n",
-    "INPUT_PATH = os.path.join(\"data\", \"interim\")\n",
-    "protein_pairs = pd.read_pickle(os.path.join(INPUT_PATH, \"2_model_df.pkl\"))"
+    "INPUT_PATH = os.path.join('..', 'data', 'interim')\n",
+    "protein_pairs = pd.read_pickle(os.path.join(INPUT_PATH, '2_model_df.pkl'))"
    ]
   },
   {
@@ -80,8 +80,8 @@
    "outputs": [],
    "source": [
     "# Save 3_model_df.pkl\n",
-    "OUT_PATH = os.path.join(\"data\", \"interim\")\n",
-    "protein_pairs.to_pickle(os.path.join(OUT_PATH, \"3_model_df.pkl\"))"
+    "OUT_PATH = os.path.join('..', 'data', 'interim')\n",
+    "protein_pairs.to_pickle(os.path.join(OUT_PATH, '3_model_df.pkl'))"
    ]
   },
   {
