sequence as typ(estr)

--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -62,8 +62,8 @@
    "outputs": [],
    "source": [
     "# Add embeddings to protein_pairs\n",
-    "protein_pairs['seqID_phage_embed'] = protein_pairs['seqID_phage'].apply(embed_protein)\n",
-    "protein_pairs['seqID_bacteria_embed'] = protein_pairs['seqID_bacteria'].apply(embed_protein)"
+    "protein_pairs['seqID_phage_embed'] = protein_pairs['seqID_phage'].astype(str).apply(embed_protein)\n",
+    "protein_pairs['seqID_bacteria_embed'] = protein_pairs['seqID_bacteria'].astype(str).apply(embed_protein)"
    ]
   },
   {
