--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -52,6 +52,8 @@
    "outputs": [],
    "source": [
     "def embed_protein(sequence):\n",
+    "    with open('3_log.txt', 'a') as f:\n",
+    "        f.write(f'Input sequence lentgh: {len(sequence)}\\n')\n",
     "    return embedder.reduce_per_protein(embedder.embed(sequence))"
    ]
   },
