--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -64,8 +64,8 @@
    "outputs": [],
    "source": [
     "# Add embeddings to protein_pairs\n",
-    "protein_pairs['seqID_phage_embed'] = protein_pairs['seqID_phage'].astype(str).apply(embed_protein, axis=1)\n",
-    "protein_pairs['seqID_bacteria_embed'] = protein_pairs['seqID_bacteria'].astype(str).apply(embed_protein, axis=1)"
+    "protein_pairs['seqID_phage_embed'] = protein_pairs['seqID_phage'].astype(str).apply(embed_protein)\n",
+    "protein_pairs['seqID_bacteria_embed'] = protein_pairs['seqID_bacteria'].astype(str).apply(embed_protein)"
    ]
   },
   {
