Set device to cuda

--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedder = prottrans_t5_embedder.ProtTransT5XLU50Embedder()"
+    "embedder = prottrans_t5_embedder.ProtTransT5XLU50Embedder(device='cuda:0')"
    ]
   },
   {
@@ -64,8 +64,8 @@
    "outputs": [],
    "source": [
     "# Add embeddings to protein_pairs\n",
-    "protein_pairs['seqID_phage_embed'] = protein_pairs['seqID_phage'].astype(str).apply(lambda x: embed_protein([x]))\n",
-    "protein_pairs['seqID_bacteria_embed'] = protein_pairs['seqID_bacteria'].astype(str).apply(lambda x: embed_protein([x]))"
+    "protein_pairs['seqID_phage_embed'] = protein_pairs['seqID_phage'].astype(str).apply(embed_protein)\n",
+    "protein_pairs['seqID_bacteria_embed'] = protein_pairs['seqID_bacteria'].astype(str).apply(embed_protein)"
    ]
   },
   {
